layout issues fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* line 1, ../Users/Simon/projects/portfolio/scss/layout/_container.scss */
+/* line 1, ../PROJECTS/SCION/portfolio/scss/layout/_container.scss */
 .container {
   margin-right: auto;
   margin-left: auto;
@@ -6,71 +6,93 @@
   padding-right: 15px;
 }
 
-/* line 8, ../Users/Simon/projects/portfolio/scss/layout/_container.scss */
+/* line 8, ../PROJECTS/SCION/portfolio/scss/layout/_container.scss */
 .contact {
   background-color: white;
   padding: 50px;
 }
 
-/* line 3, ../Users/Simon/projects/portfolio/scss/layout/_base.scss */
+/* line 3, ../PROJECTS/SCION/portfolio/scss/layout/_base.scss */
 body {
   background-color: #e6f2ff;
   letter-spacing: .4px;
   font-family: Poppins, sans-serif;
 }
 
-/* line 3, ../Users/Simon/projects/portfolio/scss/layout/_sidebar.scss */
+/* line 3, ../PROJECTS/SCION/portfolio/scss/layout/_sidebar.scss */
 .sidebar-wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
-/* line 8, ../Users/Simon/projects/portfolio/scss/layout/_sidebar.scss */
+/* line 13, ../PROJECTS/SCION/portfolio/scss/layout/_sidebar.scss */
 .link {
   display: flex;
   justify-content: center;
 }
 
+/* line 19, ../PROJECTS/SCION/portfolio/scss/layout/_sidebar.scss */
+.logo-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: px solid #81599F;
+}
+
 @media (min-width: 767px) {
-  /* line 14, ../Users/Simon/projects/portfolio/scss/layout/_sidebar.scss */
+  /* line 26, ../PROJECTS/SCION/portfolio/scss/layout/_sidebar.scss */
   .column-wrapper {
     display: flex;
     flex-direction: row;
   }
+  /* line 31, ../PROJECTS/SCION/portfolio/scss/layout/_sidebar.scss */
+  .sidebar {
+    width: 160px;
+    border: 3px solid #81599F;
+  }
+  /* line 34, ../PROJECTS/SCION/portfolio/scss/layout/_sidebar.scss */
+  .sidebar-wrapper {
+    width: 160px;
+    position: sticky;
+    top: 0;
+    overflow-x: visible;
+    height: 100%;
+  }
 }
 
-/* line 3, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 3, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 .name-first {
   grid-area: first;
 }
 
-/* line 7, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 7, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 .name-last {
   grid-area: last;
 }
 
-/* line 11, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 11, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 .email {
   grid-area: email;
 }
 
-/* line 15, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 15, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 .subject {
   grid-area: subject;
 }
 
-/* line 19, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 19, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 .message {
   grid-area: message;
 }
 
-/* line 23, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 23, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 .form {
   display: grid;
   grid-template-areas: "first" "last" "email" "subject" "message";
 }
 
-/* line 33, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 33, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 .form-control {
   background-color: #9BCCFD;
   padding: 0;
@@ -78,13 +100,13 @@ body {
   height: 3rem;
 }
 
-/* line 39, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 39, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 .form-control:hover, .form-control :focus {
   box-shadow: 0 0 3px 3px #cde6fe;
   background-color: #9BCCFD;
 }
 
-/* line 46, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+/* line 46, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
 ::placeholder {
   font-style: italic;
   color: #181818;
@@ -92,43 +114,64 @@ body {
 }
 
 @media (min-width: 767px) {
-  /* line 52, ../Users/Simon/projects/portfolio/scss/components/_form.scss */
+  /* line 52, ../PROJECTS/SCION/portfolio/scss/components/_form.scss */
   .form {
     grid-template-areas: "first last" "email email" "subject subject" "message message";
     grid-column-gap: 2rem;
   }
 }
 
-/* line 1, ../Users/Simon/projects/portfolio/scss/components/_details.scss */
+/* line 1, ../PROJECTS/SCION/portfolio/scss/components/_details.scss */
 .headline, .phone, .headline-bottom-text {
   display: flex;
   justify-content: center;
 }
 
-/* line 5, ../Users/Simon/projects/portfolio/scss/components/_details.scss */
+/* line 5, ../PROJECTS/SCION/portfolio/scss/components/_details.scss */
 .headline-p, .phone-p, .headline-bottom-text-p {
   display: flex;
   justify-content: center;
 }
 
-/* line 3, ../Users/Simon/projects/portfolio/scss/components/_projects.scss */
+/* line 11, ../PROJECTS/SCION/portfolio/scss/components/_details.scss */
+.contact {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 991px) {
+  /* line 17, ../PROJECTS/SCION/portfolio/scss/components/_details.scss */
+  .contact {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+/* line 25, ../PROJECTS/SCION/portfolio/scss/components/_details.scss */
+.button-submit {
+  width: 100px;
+}
+
+/* line 3, ../PROJECTS/SCION/portfolio/scss/components/_projects.scss */
 .project {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-/* line 9, ../Users/Simon/projects/portfolio/scss/components/_projects.scss */
+/* line 9, ../PROJECTS/SCION/portfolio/scss/components/_projects.scss */
 .project-headline {
   align-items: center;
 }
 
-/* line 13, ../Users/Simon/projects/portfolio/scss/components/_projects.scss */
+/* line 13, ../PROJECTS/SCION/portfolio/scss/components/_projects.scss */
 .project-image {
   max-width: 100%;
 }
 
-/* line 17, ../Users/Simon/projects/portfolio/scss/components/_projects.scss */
+/* line 17, ../PROJECTS/SCION/portfolio/scss/components/_projects.scss */
 .projects-wrapper {
   padding: 50px;
   align-items: center;
@@ -137,20 +180,20 @@ body {
 }
 
 @media (min-width: 767px) {
-  /* line 17, ../Users/Simon/projects/portfolio/scss/components/_projects.scss */
+  /* line 17, ../PROJECTS/SCION/portfolio/scss/components/_projects.scss */
   .projects-wrapper {
     flex-direction: row !important;
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  /* line 29, ../Users/Simon/projects/portfolio/scss/components/_projects.scss */
+  /* line 29, ../PROJECTS/SCION/portfolio/scss/components/_projects.scss */
   .projects-wrapper .project {
     flex: 1 1 222px;
     margin: 2rem;
   }
 }
 
-/* line 3, ../Users/Simon/projects/portfolio/scss/layout/_base.scss */
+/* line 3, ../PROJECTS/SCION/portfolio/scss/layout/_base.scss */
 body {
   background-color: #e6f2ff;
   letter-spacing: .4px;
